# OAI_KPA_MKU

./: .gitignore  CHANGELOG.md  OaiMKU.py  __main__.py  oai_kpa_mku.py  oai_kpa_mku_data.py  oai_kpa_mku_widget.py  oai_kpa_mku_widget.ui  oai_kpa_mku_widget_qt.ui  pyproject.toml
cfg/: oai_kpa_mku.json
log/2021_01_28 oai_kpa_mku/: 2021_01_28 18-28-39 oai_kpa_mku .csv  2021_01_28 18-29-43 oai_kpa_mku .csv  2021_01_28 18-38-09 oai_kpa_mku .csv  2021_01_28 18-39-01 oai_kpa_mku .csv  2021_01_28 18-49-00 oai_kpa_mku .csv  2021_01_28 18-52-26 oai_kpa_mku .csv
log/2021_01_29 oai_kpa_mku/: 2021_01_29 13-22-05 oai_kpa_mku .csv  2021_01_29 15-35-05 oai_kpa_mku .csv  2021_01_29 15-37-07 oai_kpa_mku .csv  2021_01_29 15-37-31 oai_kpa_mku .csv  2021_01_29 15-38-06 oai_kpa_mku .csv  2021_01_29 15-40-00 oai_kpa_mku .csv  2021_01_29 15-40-23 oai_kpa_mku .csv  2021_01_29 15-58-30 oai_kpa_mku .csv  2021_01_29 15-59-36 oai_kpa_mku .csv  2021_01_29 16-04-52 oai_kpa_mku .csv  2021_01_29 16-09-52 oai_kpa_mku .csv  2021_01_29 16-17-28 oai_kpa_mku .csv  2021_01_29 16-22-03 oai_kpa_mku .csv  2021_01_29 16-24-02 oai_kpa_mku .csv  2021_01_29 16-24-29 oai_kpa_mku .csv  2021_01_29 16-38-08 oai_kpa_mku .csv  2021_01_29 16-42-21 oai_kpa_mku .csv
log/2021_02_01 oai_kpa_mku/: 2021_02_01 18-19-33 oai_kpa_mku .csv
log/2021_02_04 oai_kpa_mku/: 2021_02_04 16-34-25 oai_kpa_mku .csv  2021_02_04 16-37-14 oai_kpa_mku .csv  2021_02_04 16-56-24 oai_kpa_mku .csv
oai_kpa_mku/: __init__.py  __main__.py  oai_kpa_mku.py  oai_kpa_mku_data.py  oai_kpa_mku_widget_qt.ui
oai_kpa_mku/cfg/: oai_kpa_mku.json
(+20 files in other folders)
