[tool.poetry]
name = "oai_kpa_mku"
version = "0.1.2"
description = ""
authors = ["snbnv <snbnv@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15"
oai_modbus = { git = "https://github.com/CrinitusFeles/OAI_Modbus.git", branch = "master" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "oai_kpa_mku/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"